miniextendr-macros/tests/ui/derive_try_from_list_on_union.stderr
error: TryFromList can only be derived for structs
 --> tests/ui/derive_try_from_list_on_union.rs:6:7
  |
6 | union Bad {
  |       ^^^
